--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -219,7 +219,7 @@ en:
       archiving: "Archive this project"
       forever: "Delete this project forever"
       owner: "Owner"
-      owner_description: "The owner is the only person that can modify this projects settings. Once you change the owner, you will no longer be able to modify project settings."
+      owner_description: "The owner is the main responsible for a project. He cannot be removed from the project unless ownership is transferred to another user."
       name: Name
       name_description: "Choose a brief and descriptive title. For example: Taggart Transcontinental"
       permalink: URL
