--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -567,9 +567,9 @@ en:
     strip:
       archived: "This project is archived. To edit or comment on this project you must unarchive it on the <a href='{{link}}'>Project Settings page</a>" ####
     gantt_banner_primer:
-      title: There are no task lists due to show on the gantt chart ####
+      title: There are no task lists due to show on the gantt chart
     upcoming_events_primer:
-      title: There are no tasks due to show on the calendar ####
+      title: There are no tasks due to show on the calendar
     projects:
       projects: Projects
     archived_projects:
